--- a/PROYECTO_406/portada.html
+++ b/PROYECTO_406/portada.html
@@ -64,6 +64,9 @@
             <div class="menu-item">
                Realizar denuncia
             </div>
+             <div class="menu-item">
+               Deja tu opinión
+            </div>
             <div class="menu-item">
                 Cecy Rescate
             </div>
@@ -128,6 +131,10 @@
                     case 'Realizar denuncia':
                         window.location.href = 'formulario.html';
                         // Aquí podrías mostrar un panel de configuración
+                        break;
+                    case 'Deja tu opinión':
+                        window.location.href = 'encuesta.html';
+                        // Aquí podrías mostrar un formulario de contacto
                         break;
                     case 'Cecy Rescate':
                         window.location.href = 'nosotros.html';
